--- a/.github/workflows/compile_changelogs.yml
+++ b/.github/workflows/compile_changelogs.yml
@@ -25,8 +25,8 @@ jobs:
         run: python tools/changelog/ss13_genchangelog.py html/changelog.html html/changelogs
       - name: Commit
         run: |
-          git config --local user.email "56381746+ss13-beebot@users.noreply.github.com"
-          git config --local user.name "ss13-beebot"
+          git config --local user.email "action@github.com"
+          git config --local user.name "Nestor Jr."
           git pull origin master
           git commit -m "Automatic changelog compile [ci skip]" -a || true
       - name: Push
