Fixes changelog bot for good (#4846)
* Update make_changelogs.yml

* Update compile_changelogs.yml

* Update make_changelogs.yml

--- a/.github/workflows/compile_changelogs.yml
+++ b/.github/workflows/compile_changelogs.yml
@@ -11,8 +11,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v1
-        with:
+        with: 
           fetch-depth: 25
+          persist-credentials: false
       - name: Python setup
         uses: actions/setup-python@v1
         with:
