--- a/.github/workflows/make_changelogs.yml
+++ b/.github/workflows/make_changelogs.yml
@@ -14,6 +14,7 @@ jobs:
         uses: actions/checkout@v1
         with:
           fetch-depth: 25
+          persist-credentials: false
       - name: Python setup
         uses: actions/setup-python@v1
         with:
@@ -33,7 +34,7 @@ jobs:
           PR_NUMBER: ${{ github.event.pull_request.number }}
         run: |
           git config --local user.email "action@github.com"
-          git config--local user.name "Nestor Jr."
+          git config --local user.name "Nestor Jr."
           git pull origin master
           git add -A html/changelogs/.
           git commit -m " Automatic changelog generation for PR #$PR_NUMBER [ci skip]" -a || true
