--- a/.github/workflows/make_changelogs.yml
+++ b/.github/workflows/make_changelogs.yml
@@ -1,13 +1,11 @@
 name: Make changelogs
 
 on:
-  pull_request:
+  push:
     branches: [master]
-    types: [closed]
 
 jobs:
   MakeCL:
-    if: ${{ github.event.pull_request.merged }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -22,13 +20,9 @@ jobs:
       - name: Install depends
         run: |
           python -m pip install --upgrade pip
-          pip install ruamel.yaml
+          pip install ruamel.yaml PyGithub
       - name: Make CL
-        env:
-          PR_BODY: ${{ toJson(github.event.pull_request.body) }}
-          PR_NUMBER: ${{ github.event.pull_request.number }}
-          PR_AUTHOR: ${{ github.event.pull_request.user.login }}
-        run: python tools/changelog/generate_cl.py "$PR_BODY" $PR_NUMBER "$PR_AUTHOR"
+        run: python tools/changelog/generate_cl.py $GITHUB_REPOSITORY ${{ secrets.GITHUB_TOKEN }} $GITHUB_SHA
       - name: Commit
         env:
           PR_NUMBER: ${{ github.event.pull_request.number }}
@@ -41,4 +35,4 @@ jobs:
       - name: Push
         uses: ad-m/github-push-action@master
         with:
-          github_token: ${{ secrets.CL_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
