Changelog Generation - Documentation Port (#4866)
* Adds documentation and ports final changes

* new line

* typo fix

--- a/.github/workflows/compile_changelogs.yml
+++ b/.github/workflows/compile_changelogs.yml
@@ -13,7 +13,6 @@ jobs:
         uses: actions/checkout@v1
         with: 
           fetch-depth: 25
-          persist-credentials: false
       - name: Python setup
         uses: actions/setup-python@v1
         with:
@@ -33,4 +32,4 @@ jobs:
       - name: Push
         uses: ad-m/github-push-action@master
         with:
-          github_token: ${{ secrets.CL_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
