--- a/.github/workflows/make_changelogs.yml
+++ b/.github/workflows/make_changelogs.yml
@@ -7,12 +7,12 @@ on:
 jobs:
   MakeCL:
     runs-on: ubuntu-latest
+    if: github.repository == 'discordia-space/CEV-Eris'
     steps:
       - name: Checkout
         uses: actions/checkout@v1
         with:
           fetch-depth: 25
-          persist-credentials: false
       - name: Python setup
         uses: actions/setup-python@v1
         with:
@@ -22,17 +22,8 @@ jobs:
           python -m pip install --upgrade pip
           pip install ruamel.yaml PyGithub
       - name: Make CL
-        run: python tools/changelog/generate_cl.py $GITHUB_REPOSITORY ${{ secrets.GITHUB_TOKEN }} $GITHUB_SHA
-      - name: Commit
         env:
-          PR_NUMBER: ${{ github.event.pull_request.number }}
-        run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "Nestor Jr."
-          git pull origin master
-          git add -A html/changelogs/.
-          git commit -m " Automatic changelog generation for PR #$PR_NUMBER [ci skip]" -a || true
-      - name: Push
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GIT_EMAIL: "action@github.com"
+          GIT_NAME: "Nestor Jr." 
+        run: python tools/changelog/generate_cl.py
